syntax = "proto3";

package userproto;

service AuthService {
  rpc validateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool isValid = 1;
}
